Tweaks from suggestions by using findbugs
A bunch of changes after using findbugs.